# rcli

./: .gitignore  Cargo.toml  README.md
src/touch/: main.rs
src/wc/: main.rs  test.rs
