[package]
name = "rcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }

[[bin]]
name = "touch"
path = "src/touch/main.rs"

[[bin]]
name = "wc"
path = "src/wc/main.rs"